# agent-flow-craft

./:  roadmap.md  .aider.chat.history.md  .aider.input.history  .gitignore  CHANGELOG.md  Makefile  README.md  execution_plan.txt  fix_makefile.sh  makefile_fix.txt  package-lock.json  prompt.txt  pyproject.toml  requirements.txt  resultado_orquestracao.json  run_coverage.py  setup.py  version_commits.json
.aider.tags.cache.v4/: cache.db
.cursor/: config.json
.cursor/agents/: mcp_local.yaml
.cursor/examples/: feature_creation.md
.cursor/rules/: enforce-e2e-tests.mdc  enforce-pyproject-toml.mdc  enforce-python-src-structure.mdc  enforce-readme-update.mdc  enforce-setup-py.mdc  enforce-test-modifications.mdc
.github/workflow/: check-assets.yml
.github/workflows/: check-markdown.yml  check-yaml.yml  lint-python.yml  update-docs-index.yml  update-tree.yml
agent_context/: concept_20250328_205739.json  concept_20250328_211126.json  concept_20250328_225312.json  concept_20250328_230821.json  concept_20250328_232808.json  concept_20250328_233004.json  concept_20250328_233554.json  concept_20250329_001931.json  concept_20250329_010217.json  concept_20250329_010403.json  concept_20250329_010446.json  concept_20250329_094147.json  concept_20250329_122652.json  concept_20250329_123226.json  concept_20250329_123503.json  concept_20250329_124012.json  concept_20250329_124142.json  concept_20250329_124945.json  concept_20250329_131518.json  concept_20250329_133215.json  concept_20250329_151538.json  concept_20250329_151844.json  feature_concept_20250328_205739.json  feature_concept_20250328_225312.json  feature_concept_20250328_232808.json  feature_concept_20250328_233004.json  feature_concept_20250328_233554.json  feature_concept_20250329_001931.json  feature_concept_20250329_010217.json  feature_concept_20250329_010403.json  feature_concept_20250329_010446.json  feature_concept_20250329_094147.json  feature_concept_20250329_122652.json  feature_concept_20250329_123226.json  feature_concept_20250329_123503.json  feature_concept_20250329_124012.json  feature_concept_20250329_124142.json  feature_concept_20250329_124945.json  feature_concept_20250329_131518.json  feature_concept_20250329_133215.json  (+26 more)
agent_platform/: .gitignore  Makefile  README.md  manage.py
agent_platform/agent_platform/: wsgi.py
agent_platform/docs/: TREE.md
agent_platform/scripts/: create_feature.py  generate_docs_index.py  generate_tree.py  migration_script.py  start_feature_agent.py
agents/: feature_creation_agent.py  plan_validator.py
config/: plan_requirements.yaml
docs/: README.md  REQUIREMENTS.md  mcp_usage.md
docs/examples/: autoflake_agent_example.md
docs/pr/: 12_feature_plan.md  131_feature_plan.md  133_feature_plan.md  135_feature_plan.md  137_feature_plan.md  139_feature_plan.md  13_feature_plan.md  141_feature_plan.md  143_feature_plan.md  145_feature_plan.md  147_feature_plan.md  149_feature_plan.md  151_feature_plan.md  153_feature_plan.md  155_feature_plan.md  161_feature_plan.md  163_feature_plan.md  165_feature_plan.md  168_feature_plan.md  17_feature_plan.md  1_fluxo_criacao_de_features.md  31_feature_plan.md  43_feature_plan.md  49_feature_plan.md  4_feature_plan.md  51_feature_plan.md  55_feature_plan.md  7_feature_plan.md  83_feature_plan.md  8_feature_plan.md  9_feature_plan.md  README.md
feature_concept_20250328_225312/: concept_20250328_225648.json
scripts/: generate_docs_index.py  generate_tree.py  install_mcp.sh  start_feature_agent.py
src/: Makefile  __init__.py  pyproject.toml
src/agent_platform/: cli.py
src/agents/: __init__.py  agent_concept_generation.py  agent_feature_concept.py  agent_feature_coordinator.py  agent_feature_creation.py  agent_github_integration.py  agent_plan_validator.py  agent_python_refactor.py  agent_tdd_criteria.py  base_agent.py  context_manager.py  local_agent_runner.py
src/cli/: __init__.py  cli.py
src/config/: plan_requirements.yaml
src/core/: agent_factory.py
src/scripts/: clean_pycache.py  create_feature.py  generate_docs_index.py  generate_tree.py  mcp_agent.py  run_agent_feature_coordinator.py  run_agent_feature_creation.py  run_agent_github_integration.py  run_agent_python_refactor.py  run_autoflake_agent.py  run_concept_agent.py  run_context_manager.py  run_coordinator_agent.py  run_feature_agent.py  run_feature_concept_agent.py  run_feature_creation_agent.py  run_github_agent.py  run_out_guardrail_concept_generation_agent.py  run_out_guardrail_tdd_criteria_agent.py  run_plan_validator.py  run_refactor_agent.py  run_tdd_criteria_agent.py  setup_mcp_test.py  start_feature_agent.py  test_refactor_file_ops.py  update_imports.py  util_clean_pycache.py  (+4 more)
test_context/: concept_20250328_214039.json  concept_20250329_010324.json  concept_20250329_100020.json  tdd_criteria_20250329_010346.json  tdd_criteria_20250329_100028.json
tests/: coverage.py  run_coverage.py  test_feature_creation_agent.py
(+75 files in other folders)
