[project]
name = "agent-flow-craft"
version = "1.0.0"
description = "Agent Flow Craft - Framework para automação de fluxo de criação de features"
authors = [{ name = "Agent Flow Craft Team" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "autogen>=0.2.0,<1.0.0",
    "pytest>=7.0.0,<8.0.0",
    "unittest2>=1.1.0,<2.0.0",
    "uv>=0.1.0,<1.0.0",
    "ghapi>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
    "requests>=2.28.0,<3.0.0",
    "python-slugify>=8.0.0,<9.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "rope>=0.22.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "pytest-mock>=3.0.0,<4.0.0",
    "twine>=4.0.0,<5.0.0",
]

[project.scripts]
agent-flow-craft = "src.cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.cli", "src.core", "src.agents", "src.configs", "src.scripts"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.autopep8]
max_line_length = 120
ignore = ["E203", "E501"]

[tool.pytest]
cache_dir = "out/pytest_cache"
python_files = "test_*.py"
testpaths = ["tests"]

[tool.coverage]
directory = "out/coverage"

[tool.tox]
envdir = "out/tox_envs"

[tool.nox]
envdir = "out/nox_envs"