[project]
name = "agent-flow-craft"
version = "0.1.0"
description = "Framework para automação de fluxo de criação de features usando agentes de IA"
authors = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"},
]
dependencies = [
    "openai>=1.0.0",
    "openrouter>=0.3.0",
    "deepseek>=0.2.0",
    "google-generativeai>=0.3.0",
    "rope>=1.10.0",
    "pygithub>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]